--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <div id="todoResult"></div> <!-- Placeholder for displaying TODO data -->
 
+    <table id="userTable"></table>
     <script>
         // Function to handle fetching data when button is clicked
         function getData() {
@@ -55,15 +56,31 @@
             let todoTitle = document.createElement("h3");
             todoTitle.textContent = `TODO Title: ${todo.title}`;
 
-          
+
 
             // Append elements to the result container
             todoResultElement.appendChild(todoTitle);
-            
+
         }
 
         // Attach event listener to the button
         document.getElementById("fetchTodoButton").addEventListener("click", getData);
+        window.onload = function () {
+            let table = document.getElementById("userTable");
+            fetch("http://jsonplaceholder.typicode.com/users")
+                .then(response => response.json())
+                .then(data => {
+                    for (let i = 0; i < data.length; i++) {
+                        let row = table.insertRow(-1);
+                        let cell1 = row.insertCell(0);
+                        let cell2 = row.insertCell(1);
+                        cell1.innerHTML = data[i].name;
+                        cell2.innerHTML = data[i].email;
+
+                    }
+                });
+        }
+
     </script>
 </body>
 
